Opened 13 years ago

Closed 13 years ago

#2663 closed defect (fixed)

Invalid data found for live audio stream

Reported by: xnejp03 Owned by:
Priority: important Component: avformat
Version: git-master Keywords: http regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

This looks like a regression, as it works with 1.1.1 release. This is on the latest git (this morning).

Command line:
ffmpeg -v 99 -loglevel 99 -i http://69.166.45.47:8000 -report

ffmpeg version N-53976-g1163910 Copyright (c) 2000-2013 the FFmpeg developers

built on Jun 12 2013 10:16:03 with gcc 4.7.2 (GCC)
configuration: --enable-static --disable-shared --disable-ffplay --disable-ffserver --enable-memalign-hack --enable-libmp3lame --enable-libass --enable-librtmp --enable-fontconfig --enable-libfreetype --enable-zlib --enable-libx264 --extra-libs='-lrtmp -lpolarssl -lws2_32 -lwinmm -lexpat -lfreetype -lfribidi -lz' --arch=x86 --enable-runtime-cpudetect --enable-pthreads --target-os=mingw32 --cross-prefix=i686-w64-mingw32- --enable-gpl --pkg-config=pkg-config
libavutil 52. 35.101 / 52. 35.101
libavcodec 55. 16.100 / 55. 16.100
libavformat 55. 8.102 / 55. 8.102
libavdevice 55. 2.100 / 55. 2.100
libavfilter 3. 75.101 / 3. 75.101
libswscale 2. 3.100 / 2. 3.100
libswresample 0. 17.102 / 0. 17.102
libpostproc 52. 3.100 / 52. 3.100

Splitting the commandline.
Reading option '-v' ... matched as option 'v' (set logging level) with argument '99'.
Reading option '-loglevel' ... matched as option 'loglevel' (set logging level) with argument '99'.
Reading option '-i' ... matched as input file with argument 'http://69.166.45.47:8000'.
Reading option '-report' ... matched as option 'report' (generate a report) with argument '1'.
Finished splitting the commandline.
Parsing a group of options: global .
Applying option v (set logging level) with argument 99.
Applying option loglevel (set logging level) with argument 99.
Applying option report (generate a report) with argument 1.
Successfully parsed a group of options.
Parsing a group of options: input file http://69.166.45.47:8000.
Successfully parsed a group of options.
Opening an input file: http://69.166.45.47:8000.
[AVIOContext @ 0416E840] Statistics: 4861 bytes read, 0 seeks
http://69.166.45.47:8000: Invalid data found when processing input

Change History (3)

comment:1 by Carl Eugen Hoyos, 13 years ago

Component: undeterminedavformat
Keywords: http regression added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Regression since 1fabd95 - related to ticket #2265, I liked the commit very much, but it apparently has to be reverted;-(
Work-around is to use -user-agent:

$ ffmpeg -user-agent 42 -i http://69.166.45.47:8000
ffmpeg version N-53976-g1163910 Copyright (c) 2000-2013 the FFmpeg developers
  built on Jun 12 2013 11:46:00 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl --disable-indev=jack
  libavutil      52. 35.101 / 52. 35.101
  libavcodec     55. 16.100 / 55. 16.100
  libavformat    55.  8.102 / 55.  8.102
  libavdevice    55.  2.100 / 55.  2.100
  libavfilter     3. 75.101 /  3. 75.101
  libswscale      2.  3.100 /  2.  3.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  3.100 / 52.  3.100
[mp3 @ 0x1e73620] Header missing
[mp3 @ 0x1e701c0] max_analyze_duration 5000000 reached at 5004000 microseconds
Input #0, mp3, from 'http://69.166.45.47:8000':
  Duration: N/A, start: 0.000000, bitrate: 51 kb/s
    Stream #0:0: Audio: mp3, 32000 Hz, mono, s16p, 51 kb/s
At least one output file must be specified

comment:2 by Clément Bœsch, 13 years ago

Feel free to revert. It is also known to break playback on http streaming server who use the user agent to guess if it's a browser (to display a summary) or a player (to stream the audio data).

Note: if you revert, please keep the default user agent string in the options tab (and thus keep http_connect unchanged); basically, just remove "Mozilla/5.0" from DEFAULT_USER_AGENT.

comment:3 by Clément Bœsch, 13 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.